<resources>
    <string name="app_name">RRK Partner App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notification</string>
    <string name="orders">Orders</string>
    <string name="offers">Offers</string>
    <string name="chat">Chat</string>
    <string name="menu">Menu</string>
    <string name="shop_by_category">Shop by category</string>
    <string name="sea_fish">Sea Fish</string>
    <string name="Rs">\u20B9</string>
    <string name="Rs_0">\u20B9 0</string>
    <string name="notes">Hi,MSC certification is available to all wild-capture fisheries, regardless of their size , scale, ecology, geography or technology. These include single spices , multi spices, trawl, long line, hand raked, pots, freshwater, marine, inshore.</string>
    <string name="certificates">Certificates</string>
    <string name="_800"> <strike> 800 </strike> </string>
    <string name="address">Address</string>
    <string name="profile">Profile</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="change">Change</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="fast_delivery">Fast Delivery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_placed">Order Placed</string>
    <string name="my_account">My Account</string>
    <string name="wallet">Wallet</string>
    <string name="branch">Branch</string>
    <string name="notifications">Notifications</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="login">Login</string>
    <string name="enter_mobile_number">Enter Mobile number</string>
    <string name="submit">Submit</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="change_mobile_number">Change mobile number</string>
    <string name="regenerate_otp">Regenerate OTP</string>
    <string name="create_profile">Create Profile</string>
    <string name="enter_name">Enter Name</string>
    <string name="email_id">Email id</string>
    <string name="select_location">Select Location</string>
    <string name="enter_address">Enter Address</string>
    <string name="add">Add</string>
    <string name="customize">Customize</string>
    <string name="out_of_stock">out of Stock</string>
    <string name="add_items">Add items</string>
    <string name="cart_summary">Cart Summary</string>
    <string name="item">Items</string>
    <string name="quantity">Quantity</string>
    <string name="total">Total</string>
    <string name="grant_total">Grant Total</string>
    <string name="pin_address">Pin Address</string>
    <string name="licence">Licence</string>
    <string name="addProof">Address Proof</string>
    <string name="order_history">Order History</string>
    <string name="in">In</string>
    <string name="order_id">Order id :</string>
    <string name="location">Location :</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>