<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_orders">

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.codetez.partnerapp.ui.orders.OrdersFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/navigation_order_history"
        android:name="com.codetez.partnerapp.ui.orders_history.OrderHistoryFragment"
        android:label="@string/order_history"
        tools:layout="@layout/fragment_order_history" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.codetez.partnerapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.codetez.partnerapp.ui.notifications.NotificationsFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>