<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.OtpActivity">


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"

        style="@style/welcome_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/constLayout"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_login"

        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/loginLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            style="@style/text_18sp_white"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="9864756636"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:layout_margin="@dimen/_16sdp"
            android:background="@drawable/bg_edit_text"
            app:layout_constraintTop_toBottomOf="@id/loginLabel"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_12sp_white"
            android:text="@string/enter_otp"
            android:layout_marginTop="@dimen/_16sdp"
            app:layout_constraintStart_toStartOf="@id/phone_number"
            app:layout_constraintTop_toBottomOf="@id/phone_number"
            />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@drawable/bg_edit_text"
            app:layout_constraintTop_toBottomOf="@id/label"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/change_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_mobile_number"

            style="@style/text_10sp_white"

            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@id/otp"
            app:layout_constraintStart_toStartOf="@id/otp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/regen_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regenerate_otp"

            style="@style/text_10sp_white"

            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@id/otp"
            app:layout_constraintEnd_toEndOf="@id/otp"
            />



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/bg_submit"
            android:text="@string/submit"
            style="@style/toolbar_title_text"
            android:paddingStart="@dimen/_25sdp"
            android:paddingEnd="@dimen/_25sdp"
            app:layout_constraintTop_toBottomOf="@id/change_number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>