<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75"
        />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/item_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/item"
        android:textColor="@color/orange"
        android:drawablePadding="@dimen/_5sdp"
        android:textSize="@dimen/_11sdp"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline1"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/qty_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/quantity"
        android:textColor="@color/orange"
        android:drawablePadding="@dimen/_5sdp"
        android:textSize="@dimen/_11sdp"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintStart_toEndOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/total_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/total"
        android:textColor="@color/orange"
        android:drawablePadding="@dimen/_5sdp"
        android:textSize="@dimen/_11sdp"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>