<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color"
    tools:context=".ui.profile.CreateProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        style="@style/text_20sp_white"
        android:text="@string/create_profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/image"
        android:layout_margin="@dimen/_14sdp"
        app:layout_constraintTop_toBottomOf="@id/label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/upload"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_25sdp"

        android:padding="@dimen/_5sdp"
        android:drawableStart="@drawable/ic_upload"
        android:drawablePadding="@dimen/_5sdp"
        android:background="@drawable/bg_submit"
        android:textAllCaps="false"
        android:text="Upload"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:singleLine="true"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/bg_edit_text"
        app:layout_constraintTop_toBottomOf="@id/upload"
        app:layout_constraintStart_toStartOf="parent"
        />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/bg_edit_text"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="parent"
        />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_10sdp"
        android:hint="@string/select_location"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:singleLine="true"
        android:inputType="text"
        android:drawableEnd="@drawable/bg_drop_down"
        android:background="@drawable/bg_edit_text"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:hint="@string/enter_address"
        android:inputType="textMultiLine"
        android:lines="10"
        android:minLines="5"
        android:gravity="top|left"
        android:maxLines="15"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/bg_edit_text"
        app:layout_constraintTop_toBottomOf="@id/location"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/licence"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_70sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:hint="@string/licence"
        android:inputType="textMultiLine"
        android:lines="10"
        android:minLines="5"
        android:gravity="top|left"
        android:maxLines="15"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/bg_edit_text"
        app:layout_constraintTop_toBottomOf="@id/address"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/uploadLicence"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_25sdp"

        android:padding="@dimen/_5sdp"
        android:drawableStart="@drawable/ic_upload"
        android:drawablePadding="@dimen/_5sdp"
        android:background="@drawable/bg_submit"
        android:textAllCaps="false"
        android:text="Upload"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="@id/licence"
        app:layout_constraintBottom_toBottomOf="@id/licence"
        app:layout_constraintEnd_toEndOf="@id/address"/>


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/addProof"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_70sdp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:hint="@string/addProof"
            android:inputType="textMultiLine"
            android:lines="10"
            android:minLines="5"
            android:gravity="top|left"
            android:maxLines="15"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@drawable/bg_edit_text"
            app:layout_constraintTop_toBottomOf="@id/licence"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/uploadProof"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25sdp"

            android:padding="@dimen/_5sdp"
            android:drawableStart="@drawable/ic_upload"
            android:drawablePadding="@dimen/_5sdp"
            android:background="@drawable/bg_submit"
            android:textAllCaps="false"
            android:text="Upload"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toTopOf="@id/addProof"
            app:layout_constraintBottom_toBottomOf="@id/addProof"
            app:layout_constraintEnd_toEndOf="@id/address"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/bg_submit"
        android:text="@string/submit"
        style="@style/toolbar_title_text"
        android:paddingStart="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:paddingEnd="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addProof"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>